tests/ui/parser/unclosed-delimiter-in-dep.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/unclosed_delim_mod.rs:5:7
   |
LL | pub fn new() -> Result<Value, ()> {
   |                                   - closing delimiter possibly meant for this
LL |     Ok(Value {
   |       ^ unclosed delimiter
LL |     }
LL | }
   | ^ mismatched closing delimiter

error[E0308]: mismatched types
  --> $DIR/unclosed-delimiter-in-dep.rs:4:20
   |
LL |     let _: usize = unclosed_delim_mod::new();
   |            -----   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `Result<Value, ()>`
   |            |
   |            expected due to this
   |
   = note: expected type `usize`
              found enum `Result<Value, ()>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
